--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@nestjs/passport": "^6.1.0",
     "@nestjs/platform-express": "^6.3.1",
     "bcrypt": "^3.0.6",
+    "class-transformer": "^0.2.3",
+    "class-validator": "^0.9.1",
     "dotenv": "^8.0.0",
     "mongoose": "^5.5.14",
     "passport": "^0.4.0",
@@ -40,7 +42,7 @@
     "@types/dotenv": "^6.1.1",
     "@types/express": "^4.17.0",
     "@types/jest": "^24.0.13",
-    "@types/mongoose": "^5.5.5",
+    "@types/mongoose": "^5.5.6",
     "@types/node": "^12.0.7",
     "@types/supertest": "^2.0.7",
     "concurrently": "^4.1.0",
