--- a/.env
+++ b/.env
@@ -2,5 +2,8 @@ NODE_ENV=development
 PORT=3000
 SESSION_SECRET=VuongVu-D18473461A
 
+JWT_SECRET=D18473461A
+JWT_EXPIRES=86400000
+
 MONGO_URI=mongodb://127.0.0.1:27017/nest-api
 # MONGO_URI=mongodb://admin:abcd1234@ds259855.mlab.com:59855/news-graph
