--- a/package.json
+++ b/package.json
@@ -22,16 +22,21 @@
   "dependencies": {
     "@nestjs/common": "^6.3.1",
     "@nestjs/core": "^6.3.1",
+    "@nestjs/jwt": "^6.1.1",
     "@nestjs/mongoose": "^6.1.2",
     "@nestjs/passport": "^6.1.0",
     "@nestjs/platform-express": "^6.3.1",
     "bcrypt": "^3.0.6",
+    "cache-manager": "^2.9.1",
     "class-transformer": "^0.2.3",
     "class-validator": "^0.9.1",
     "dotenv": "^8.0.0",
+    "express-rate-limit": "^5.0.0",
+    "helmet": "^3.18.0",
     "mongoose": "^5.5.14",
     "passport": "^0.4.0",
     "passport-http-bearer": "^1.0.1",
+    "passport-jwt": "^4.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^2.6.3",
     "rxjs": "^6.5.2"
@@ -41,9 +46,12 @@
     "@types/bcrypt": "^3.0.0",
     "@types/dotenv": "^6.1.1",
     "@types/express": "^4.17.0",
+    "@types/express-rate-limit": "^3.3.0",
+    "@types/helmet": "^0.0.43",
     "@types/jest": "^24.0.13",
     "@types/mongoose": "^5.5.6",
-    "@types/node": "^12.0.7",
+    "@types/node": "^12.0.8",
+    "@types/passport-jwt": "^3.0.1",
     "@types/supertest": "^2.0.7",
     "concurrently": "^4.1.0",
     "jest": "^24.8.0",
