--- a/package.json
+++ b/package.json
@@ -23,9 +23,9 @@
     "@nestjs/common": "^6.3.1",
     "@nestjs/core": "^6.3.1",
     "@nestjs/jwt": "^6.1.1",
-    "@nestjs/mongoose": "^6.1.2",
     "@nestjs/passport": "^6.1.0",
     "@nestjs/platform-express": "^6.3.1",
+    "@nestjs/typeorm": "^6.1.2",
     "bcrypt": "^3.0.6",
     "cache-manager": "^2.9.1",
     "class-transformer": "^0.2.3",
@@ -33,13 +33,14 @@
     "dotenv": "^8.0.0",
     "express-rate-limit": "^5.0.0",
     "helmet": "^3.18.0",
-    "mongoose": "^5.5.14",
+    "mongodb": "^3.2.7",
     "passport": "^0.4.0",
     "passport-http-bearer": "^1.0.1",
     "passport-jwt": "^4.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^2.6.3",
-    "rxjs": "^6.5.2"
+    "rxjs": "^6.5.2",
+    "typeorm": "^0.2.18"
   },
   "devDependencies": {
     "@nestjs/testing": "^6.3.1",
@@ -49,7 +50,6 @@
     "@types/express-rate-limit": "^3.3.0",
     "@types/helmet": "^0.0.43",
     "@types/jest": "^24.0.13",
-    "@types/mongoose": "^5.5.6",
     "@types/node": "^12.0.8",
     "@types/passport-jwt": "^3.0.1",
     "@types/supertest": "^2.0.7",
