--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "cache-manager": "^2.9.1",
     "class-transformer": "^0.2.3",
     "class-validator": "^0.9.1",
+    "compression": "^1.7.4",
     "dotenv": "^8.0.0",
     "express-rate-limit": "^5.0.0",
     "helmet": "^3.18.0",
@@ -45,6 +46,7 @@
   "devDependencies": {
     "@nestjs/testing": "^6.3.1",
     "@types/bcrypt": "^3.0.0",
+    "@types/compression": "^0.0.36",
     "@types/dotenv": "^6.1.1",
     "@types/express": "^4.17.0",
     "@types/express-rate-limit": "^3.3.0",
