--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "tsc -p tsconfig.build.json",
     "format": "prettier --write \"src/**/*.ts\"",
     "start": "ts-node -r tsconfig-paths/register src/main.ts",
-    "start:dev": "concurrently --handle-input \"wait-on dist/main.js && nodemon\" \"tsc -w -p tsconfig.build.json\" ",
+    "start:dev": "rimraf dist && concurrently --handle-input \"wait-on dist/main.js && nodemon\" \"tsc -w -p tsconfig.build.json\" ",
     "start:debug": "nodemon --config nodemon-debug.json",
     "prestart:prod": "rimraf dist && yarn build",
     "start:prod": "node dist/main.js",
@@ -61,10 +61,10 @@
     "prettier": "^1.18.2",
     "supertest": "^4.0.2",
     "ts-jest": "24.0.2",
-    "ts-node": "8.2.0",
+    "ts-node": "8.3.0",
     "tsconfig-paths": "3.8.0",
     "tslint": "5.17.0",
-    "typescript": "3.5.1",
+    "typescript": "3.5.2",
     "wait-on": "^3.2.0"
   },
   "jest": {
